# pypl

./: .gitignore  CLAUDE.md  QUESTIONS.md  README.md  pyproject.toml
examples/physics/: README.md  main.py  pypl.toml  pyproject.toml
examples/physics-example-project/: README.md  main.py  pypl.toml  pyproject.toml
examples/physics-example-project/physics_example_project/: __init__.py  field.py  force.py  kinematics.py  particle.py  world.py
examples/physics/physics/: __init__.py  force.py  particle.py  units.py  world.py
examples/shop/: main.py  pypl.toml  pyproject.toml
examples/shop-example-project/: main.py  pypl.toml  pyproject.toml
examples/shop-example-project/shop_example_project/: __init__.py  cache.py  geo.py  pricing.py  shop.py  utils.py
examples/shop/shop/: __init__.py  inventory.py  shop.py
src/pypl/: __init__.py  __main__.py  cli.py  config.py  cpp.py  naming.py  warnings.py
src/pypl/analyzer/: __init__.py  kind.py  members.py  model.py  package_walker.py  type_mapper.py  visibility.py
src/pypl/emit/: __init__.py  class_diagram.py  sequence_diagram.py
src/pypl/trace/: __init__.py  monkeypatch.py  runner.py
tests/: test_class_diagram.py  test_cpp_extras.py  test_inheritance_and_stubs.py  test_kind.py  test_naming.py  test_new_features.py  test_plantuml_syntax.py  test_type_mapper.py  test_visibility.py
