[project]
name = "pypl"
version = "0.1.0"
description = "Generate C++-flavoured PlantUML diagrams from Python architecture sketches"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.4",
]

[project.scripts]
pypl = "pypl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pypl"]

[dependency-groups]
dev = [
    "shop-example-project",
    "physics-example-project",
    "poethepoet>=0.30",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.ruff]
target-version = "py314"
line-length = 100
extend-exclude = ["examples/*/diagrams"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.pyright]
include = ["src", "tests", "examples"]
exclude = ["**/__pycache__", "**/.venv", ".poe-e2e", "**/diagrams"]
pythonVersion = "3.14"
typeCheckingMode = "basic"
reportMissingImports = "error"

[tool.poe.tasks]
format       = { cmd = "ruff format .", help = "Rewrite source with ruff format" }
format-check = { cmd = "ruff format --check .", help = "Fail if any file needs reformatting" }
lint         = { cmd = "ruff check .", help = "Static lint with ruff" }
lint-fix     = { cmd = "ruff check --fix .", help = "Apply ruff's auto-fixes" }
typecheck    = { cmd = "pyright", help = "Static type-check the package, tests, and examples" }
test         = { cmd = "pytest tests -q", help = "Run the unit-test suite" }
e2e          = { shell = "rm -rf .poe-e2e && uv run pypl class shop_example_project --out .poe-e2e/shop && uv run pypl class physics_example_project --out .poe-e2e/physics && uv run pypl seq examples/shop-example-project/main.py --package shop_example_project --out .poe-e2e/shop && uv run pypl seq examples/physics-example-project/main.py --package physics_example_project --out .poe-e2e/physics && rm -rf .poe-e2e", help = "Run pypl class + seq on both example projects (smoke test)" }
check        = { sequence = ["format-check", "lint", "typecheck", "test", "e2e"], help = "Run every read-only check (matches CI)" }

[tool.uv.workspace]
members = ["examples/shop-example-project", "examples/physics-example-project"]

[tool.uv.sources]
shop-example-project = { workspace = true }
physics-example-project = { workspace = true }
