[project]
name = "physics-example-project"
version = "0.1.0"
description = "Physics-domain architecture sketch used to exercise pypl."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.4",
    "pypl",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["physics_example_project"]

[tool.uv.sources]
pypl = { workspace = true }
