[project]
name = "shop"
version = "0.1.0"
description = "Shop-domain architecture sketch used to exercise pypl."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.4",
    "pypl",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shop"]

[tool.uv.sources]
pypl = { workspace = true }
